discussion/kv_engine/177834/177834_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Test performance with f14 vs std::unordered_map

Change-Id: I0edcfebe6b4d61d78d6a310ff48fd6f36cfb73b0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-07-21 13:07:48.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-21 13:18:15.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47950/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47950/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20271/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20271/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8900/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8900/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22087/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22087/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29420/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29420/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19118/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/statistics/prometheus.cc:131:68: error: implicit instantiation of undefined template "folly::F14FastMap<std::__cxx11::basic_string<char>, prometheus::MetricFamily, folly::HeterogeneousAccessHash<std::__cxx11::basic_string<char>, void>, folly::HeterogeneousAccessEqualTo<std::__cxx11::basic_string<char>, void>, std::allocator<std::pair<const std::__cxx11::basic_string<char>, prometheus::MetricFamily> > >" [clang-diagnostic-error]
        folly::F14FastMap<std::string, ::prometheus::MetricFamily> statsMap;
                                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/container/F14Map-fwd.h:55:7: note: template is declared here
class F14FastMap;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:25:28: error: no template named "F14FastMap" in namespace "folly" [clang-diagnostic-error]
    using StatMap = folly::F14FastMap<std::string, prometheus::MetricFamily>;
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:30:9: error: unknown type name "StatMap" [clang-diagnostic-error]
        StatMap high;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:31:9: error: unknown type name "StatMap" [clang-diagnostic-error]
        StatMap low;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:32:9: error: unknown type name "StatMap" [clang-diagnostic-error]
        StatMap metering;
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19118/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/statistics/prometheus.cc:131:68:
error: implicit instantiation of undefined template "folly::F14FastMap<std::__cxx11::basic_string<char>, prometheus::MetricFamily, folly::HeterogeneousAccessHash<std::__cxx11::basic_string<char>, void>, folly::HeterogeneousAccessEqualTo<std::__cxx11::basic_string<char>, void>, std::allocator<std::pair<const std::__cxx11::basic_string<char>, prometheus::MetricFamily> > >" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19118/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40293/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/statistics/labelled_collector.h:101:27:
error: implicit instantiation of undefined template "folly::F14FastMap<const char *, std::basic_string_view<char, std::char_traits<char> >, std::hash<std::string_view>, std::equal_to<std::basic_string_view<char, std::char_traits<char> > >, std::allocator<std::pair<const char *const, std::basic_string_view<char, std::char_traits<char> > > > >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40293/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8804/ : FAILURE

Compile error at [2022-07-21T13:09:44.671Z] ../kv_engine/include/statistics/labelled_collector.h:101:27:
error: implicit instantiation of undefined template "folly::F14FastMap<const char *, std::basic_string_view<char, std::char_traits<char> >, std::hash<std::string_view>, std::equal_to<std::basic_string_view<char, std::char_traits<char> > >, std::allocator<std::pair<const char *const, std::basic_string_view<char, std::char_traits<char> > > > >"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8804/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18283/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21025/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21387/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
